Set basic countdown app

--- a/src/ke.html
+++ b/src/ke.html
@@ -4,6 +4,8 @@
 	<title></title>
 </head>
 <body>
-test
+<div id="count"></div>
+<button id="start">start</button>
+<script type="text/javascript">require('./renderer')</script>
 </body>
 </html>
