--- a/src/ke.html
+++ b/src/ke.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="countdown.css">
 </head>
 <body>
-<div id="count"></div>
-<button id="start">start</button>
+<div class="container">
+<div class="countdown" id="count"></div>
+<button class="btn" id="start">start</button>
+</div>
 <script type="text/javascript">require('./renderer')</script>
 </body>
 </html>
